refactored and completed

--- a/app/views/payment/new.html.erb
+++ b/app/views/payment/new.html.erb
@@ -1,26 +1,26 @@
 <form action="/payment/results">
   <div>
-    <label for="apr_input">
+    <label for="apr">
       APR
     </label>
 
-    <input id="apr_input" text="text" name="user_apr" placeholder="E.g. 5.42">
+    <input id="apr" text="text" name="apr_input" placeholder="E.g. 5.42">
   </div>
 
   <div>
-    <label for="years_input">
+    <label for="years">
       Number of years
     </label>
 
-    <input id="years_input" text="text" name="user_years" placeholder="How many years to repay?">
+    <input id="years" text="text" name="years_input" placeholder="How many years to repay?">
   </div>
 
   <div>
-    <label for="principal_input">
+    <label for="principal">
       Principal
     </label>
 
-    <input id="principal_input" text="text" name="user_pv" placeholder="How much principal?">
+    <input id="principal" text="text" name="principal_input" placeholder="How much principal?">
   </div>
 
   <button>
