--- a/app/views/random/results.html.erb
+++ b/app/views/random/results.html.erb
@@ -7,21 +7,21 @@
     Minimum
   </dt>
   <dd>
-    44.0
+   <%= @the_min %>
   </dd>
 
   <dt>
     Maximum
   </dt>
   <dd>
-    666.0
+   <%= @the_max %>
   </dd>
 
   <dt>
     Random Number
   </dt>
   <dd>
-    598.267352586598
+    <%= @random_num %>
   </dd>
 </dl>
 
