--- a/app/views/square/results.html.erb
+++ b/app/views/square/results.html.erb
@@ -6,16 +6,17 @@
     Number
   </dt>
   <dd>
-    44
+    <%= @the_num %>
   </dd>
 
   <dt>
     Square
   </dt>
   <dd>
-    1936.0
+    <%= @the_result %>
   </dd>
 </dl>
+
 <a href="/square/new">
   Calculate another square
 </a>
