--- a/app/views/square_root/results.html.erb
+++ b/app/views/square_root/results.html.erb
@@ -7,14 +7,14 @@
     Number
   </dt>
   <dd>
-    555
+    <%= @the_num %>
   </dd>
 
   <dt>
     Square Root
   </dt>
   <dd>
-    23.558437978779494
+    <%= @the_result %>
   </dd>
 </dl>
 
