--- a/app/views/random/new.html.erb
+++ b/app/views/random/new.html.erb
@@ -4,7 +4,7 @@
       Minimum
     </label>
 
-    <input id="min_input" text="text" name="user_min" placeholder="E.g. 1.5">
+    <input id="min_input" text="text" name="min" placeholder="E.g. 1.5">
   </div>
 
   <div>
@@ -12,7 +12,7 @@
       Maximum
     </label>
 
-    <input id="max_input" text="text" name="user_max" placeholder="E.g. 4.5">
+    <input id="max_input" text="text" name="max" placeholder="E.g. 4.5">
   </div>
 
   <button>
