--- a/app/views/square_root/new.html.erb
+++ b/app/views/square_root/new.html.erb
@@ -1,10 +1,10 @@
 <form action="/square_root/results">
   <div>
-    <label for="number_input">
+    <label for="user_number">
       Enter a number
     </label>
 
-    <input id="number_input" text="text" name="user_number" placeholder="What number do you want to take the square root of?">
+    <input id="user_number" text="text" name="number" placeholder="What number do you want to take the square root of?">
   </div>
 
   <button>
